fix arrow vertical align

--- a/src/components/table/Table.pcss
+++ b/src/components/table/Table.pcss
@@ -92,26 +92,26 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 100%;
 
   & .arrow { 
     position: relative;
     display: block;
     flex-grow: 1;
     margin: 0 5px;
-    height: 14px; /* font-size */
-    background: linear-gradient(to top, transparent, transparent 6px, #000 6px, #000 7px, transparent 7px);
+    margin-top: 2px;
+    height: 7px;
+    background: linear-gradient(to top, transparent, transparent 3px, #000 3px, #000 4px, transparent 4px);
     background-repeat-x:  repeat;
 
     &::after {
       position: absolute;
-      top: 4px;
       right: -4px;
+      bottom: 0;
       display: block;
-      width: 8px;
-      height: 8px;
+      width: 7px;
+      height: 7px;
       background-image: url('./images/arrow.svg');
-      background-size: cover;
+      background-size: 100%;
       content: '';
       
     }
